# NetMiddleware

./: .gitignore  CMakeLists.txt  NetMiddleware  README.md  README.txt  Service  main.cpp
api/: README.md
api/config/: northbound_api.cpp  northbound_api.hpp
api/net/: CMakeLists.txt  README.md  common.cmake  service.cpp  test_service.cpp
api/net/lag/: lag.cpp  lag.hpp  lag_service.cpp  lag_service.hpp
api/net/lib/: common.hpp  module_registry.hpp
api/net/lib/interface/: interface.hpp
api/net/lib/lag/: lag.hpp
api/net/lib/lib/: log.hpp  std_types.hpp
api/net/lib/net/: module_registry.hpp
api/net/lib/net/interface/: interface.hpp  interface_queryable.hpp
api/net/lib/net/lag/: lag.hpp  lag_queryable.hpp
api/net/lib/net/port/: port.hpp  port_queryable.hpp
api/net/lib/net/vlan/: vlan.hpp  vlan_queryable.hpp
api/net/lib/port/: port.hpp  port_queryable.hpp
api/net/lib/vlan/: vlan.hpp  vlan_queryable.hpp
api/net/port/: port_service.cpp  port_service.hpp
api/net/proto/: CMakeLists.txt  common.proto  interface.proto  lag.proto  port.proto  vlan.proto
api/net/proto/common/: common.grpc.pb.cc  common.grpc.pb.h
api/net/proto/interface/: interface.grpc.pb.cc  interface.grpc.pb.h  interface.pb.cc  interface.pb.h
api/net/proto/lag/: lag.grpc.pb.cc  lag.grpc.pb.h  lag.pb.cc  lag.pb.h
api/net/proto/port/: port.grpc.pb.cc  port.grpc.pb.h  port.pb.cc  port.pb.h
api/net/proto/vlan/: vlan.grpc.pb.cc  vlan.grpc.pb.h  vlan.pb.cc  vlan.pb.h
api/net/protos/: CMakeLists.txt  common.pb.cc  common.pb.h  common.proto  lag.grpc.pb.cc  lag.grpc.pb.h  lag.pb.cc  lag.pb.h  lag.proto  port.grpc.pb.cc  port.pb.h
api/net/protos/lag/: lag.grpc.pb.cc  lag.grpc.pb.h  lag.pb.cc  lag.pb.h  lag.proto
api/net/stubs/interface/: interface_service.cpp  interface_service.hpp
api/net/stubs/lag/: lag_service.cpp
api/net/stubs/port/: port_service.cpp  port_service.hpp
api/net/stubs/vlan/: vlan_service.cpp  vlan_service.hpp
debian/: changelog  control  net-middleware.install  netmiddleware.install  rules
lib/: multiinherit_shared.hpp  topo_sort.cpp  topo_sort.hpp  utils.hpp
src/: interface_management.cpp  interface_management.hpp  lag_management.cpp  lag_management.hpp  main.cpp  module_names.hpp  module_registry.hpp  port_management.cpp  port_management.hpp  vlan_management.cpp  vlan_management.hpp
src/lib/: interface.hpp  interface_observable.cpp  interface_observable.hpp  interface_queryable.hpp  lag.hpp  lag_observable.cpp  lag_observable.hpp  lag_queryable.hpp  log.cpp  log.hpp  log_interface.hpp  log_management.cpp  log_management.hpp  observer.cpp  observer.hpp  port.hpp  port_observable.cpp  port_observable.hpp  port_queryable.hpp  std_types.hpp  vlan.hpp  vlan_queryable.hpp
src/lib/xpath/: composite.cpp  composite.hpp  leaf.cpp  leaf.hpp  node.cpp  node.hpp  visitor.hpp  visitor_spec.hpp  xpath.cpp  xpath.hpp
src/request_handle/: request_handle.cpp  request_handle.hpp
src/request_handle/interface/aggregate_ethernet/: aggregate_ethernet_members_request_handle.cpp  aggregate_ethernet_members_request_handle.hpp  aggregate_ethernet_request_handle.cpp  aggregate_ethernet_request_handle.hpp
src/request_handle/interface/ethernet/: ethernet_request_handle.cpp  ethernet_request_handle.hpp  interface_speed_request_handle.cpp  interface_speed_request_handle.hpp
src/request_handle/platform/port/: port_breakout_request_handle.cpp  port_breakout_request_handle.hpp  port_request_handle.cpp  port_request_handle.hpp
src/request_handle/protocol/lacp/: lacp_members_request_handle.cpp  lacp_members_request_handle.hpp  lacp_request_handle.cpp  lacp_request_handle.hpp
src/request_handle/protocol/rstp/: rstp_members_request_handle.cpp  rstp_members_request_handle.hpp  rstp_request_handle.cpp  rstp_request_handle.hpp
src/request_handle/vlan/: vlan_members_request_handle.cpp  vlan_members_request_handle.hpp  vlan_request_handle.cpp  vlan_request_handle.hpp
